<resources>
    <string name="app_name">AImagine</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_stablediffusion">Stable Diffusion</string>
    <string name="menu_settings">Settings</string>
    
    <!-- Stable Diffusion Fragment -->
    <string name="stable_diffusion_title">Stable Diffusion</string>
    <string name="prompt_hint">Enter your prompt here</string>
    <string name="image_size_title">Image Size</string>
    <string name="width_hint">Width</string>
    <string name="height_hint">Height</string>
    <string name="generate_button">Generate Image</string>
    <string name="ready_status">Ready to generate</string>
    <string name="generated_image_description">Generated image</string>
    
    <!-- Settings Fragment -->
    <string name="settings_title">Settings</string>
    <string name="sd_config_title">Stable Diffusion Configuration</string>
    <string name="api_url_hint">API URL</string>
    <string name="api_url_example">Example: http://127.0.0.1:7860/</string>
    <string name="save_button">Save</string>
    <string name="test_connection_button">Test Connection</string>
</resources>